# bookmark-rs

./: Cargo.toml  notes.org
src/: main.rs  models.rs
