[package]
name = "bookmark"
version = "0.1.0"
authors = ["Grant Horner <h.grant.horner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.0"
ron = "0.6.0"
regex = "1.3.9"
serde = "1.0.114"
structopt = "0.3.15"

# crossterm = "0.17"
# tui = { version = "0.9", default-features = false, features = ['crossterm'] }
